Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -21,7 +21,11 @@ a {
 
 #featured-property p {
   width: 800px;
-  /*text-align: center;*/
+  text-align: center;
+}
+
+#featured-property {
+  justify-content: center;
 }
 
 #details {
