Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ nav a {
   background-color: grey;
 }
 
-#featured-property p {
-  width: 800px;
+/*#featured-property p {*/
+/*  width: 800px;*/
   
-}
+/*}*/
 
 #featured-property {
   text-align: center;
