--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  
+  margin: auto;
 }
 
 header {
@@ -26,8 +26,8 @@ nav a {
 }
 
 #featured-property {
+  text-align: center;
   
-  margin: auto;
   width: 800px;
 }
 
