--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ nav a {
 #details {
   display: block;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  
 }
 
 #details div {
