--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav a {
   display: flex;
   justify-content: center;
   width: 100%;
-  flex: space-around;
+  flex: spacearound;
 }
 
 #details div {
