--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav a {
 }
 
 #details {
-  display: flex-box;
+  display: block;
   justify-content: center;
   width: 100%;
   
@@ -40,6 +40,6 @@ nav a {
 #details div {
   float: left;
   background-color: red;
-  width: 25%;
-  flex-basis: : space-around;
+  width: 20%;
+  
 }
