--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav a {
 
 #details {
   display: block;
-  justify-content: center;
+  justify-items: center;
   width: 100%;
   
 }
@@ -40,6 +40,6 @@ nav a {
 #details div {
   float: left;
   background-color: red;
-  width: 20%;
+  width: 25%;
   
 }
