--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav a {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  max-width: 100%;
+  width: 800px;
 }
 
 #featured-property {
